added a basic readme

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
-      <a href="#mailto" class='email-link'>csalvi42@gmail.com</a>
+      <a href="#mailto" class='email-link'>+ Email Me</a>
     </div>
   </header>
 
