huge issues with making responsive header

--- a/index.html
+++ b/index.html
@@ -11,24 +11,36 @@
 <body>
 
 <div class="home-wrap">
-  <header class="logo">
-  <div class="header-position">
-      <nav class="site-nav">
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#github">github</a></li>
-          <li><a href="#flickr">Flickr</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#notes">Notes</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-      <a href="#mailto" class='email-link'>+ Email Me</a>
-    </div>
+
+
+<div class="mobile-nav">
+      <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#github">github</a></li>
+            <li><a href="#flickr">Flickr</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#notes">Notes</a></li>
+            <li><a href="#contact">Contact</a></li>
+      </ul>
+<div>
+
+  <header class="#">
+    <div class="header-position">
+        <nav class="site-nav">
+          
+        </nav>
+        <a href="#mailto" class='email-link'>+ Email Me</a>
+        <div class="mobile-nav-toggle"> 
+           <span>
+           -
+           </span>
+        </div>
+      </div>
   </header>
 
   <div class="home-sections">
-    <div style="height: 2000px"></div>
+    <div style="height: 2000px">
+    </div>
   </div>
 
 </div>
