fixed issue with viewport in full screen mode, but still struggling to make resonsive header

--- a/index.html
+++ b/index.html
@@ -13,28 +13,26 @@
 <div class="home-wrap">
 
 
-<div class="mobile-nav">
-      <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#github">github</a></li>
-            <li><a href="#flickr">Flickr</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#notes">Notes</a></li>
-            <li><a href="#contact">Contact</a></li>
-      </ul>
-<div>
+  <div class="mobile-nav">
+        <ul>
+              <li><a href="#about">About</a></li>
+              <li><a href="#github">github</a></li>
+              <li><a href="#flickr">Flickr</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#notes">Notes</a></li>
+              <li><a href="#contact">Contact</a></li>
+        </ul>
+  </div>
 
   <header class="#">
-    <div class="header-position">
-        <nav class="site-nav">
-          
-        </nav>
-        <a href="#mailto" class='email-link'>+ Email Me</a>
-        <div class="mobile-nav-toggle"> 
-           <span>
-           -
-           </span>
-        </div>
+      <div class="header-position">
+          <nav class="site-nav">
+            
+          </nav>
+          <a href="#mailto" class='email-link'>+ Email Me</a>
+            <div class="mobile-nav-toggle"> 
+                <span>-</span>
+            </div>
       </div>
   </header>
 
