still cant get flush for responsive design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="home-wrap">
 
 
-  <div class="mobile-nav">
+<!--   <div class="mobile-nav">
         <ul>
               <li><a href="#about">About</a></li>
               <li><a href="#github">github</a></li>
@@ -22,16 +22,23 @@
               <li><a href="#notes">Notes</a></li>
               <li><a href="#contact">Contact</a></li>
         </ul>
-  </div>
+  </div> -->
 
   <header class="#">
       <div class="header-position">
           <nav class="site-nav">
-            
+            <ul>
+              <li><a href="#about">About</a></li>
+              <li><a href="#github">github</a></li>
+              <li><a href="#flickr">Flickr</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#notes">Notes</a></li>
+              <li><a href="#contact">Contact</a></li>
+        </ul>
           </nav>
           <a href="#mailto" class='email-link'>+ Email Me</a>
             <div class="mobile-nav-toggle"> 
-                <span>-</span>
+              <span></span>
             </div>
       </div>
   </header>
